# darwin

./: .gitignore  pyproject.toml
configs/run/: bridge.yaml  bridge_explorers.yaml  bridge_explorers2.yaml  bridge_explorers3.yaml  bridge_explorers4.yaml  corner_expansion.yaml  default.yaml  default_e500.yaml  default_h24.yaml  e500_decay_regen.yaml  from_pretrain.yaml  from_pretrain_orbiting.yaml  from_pretrain_orbiting_harsh.yaml  from_pretrain_simple.yaml  from_pretrain_temporal.yaml  maze.yaml  maze_dynamic.yaml  maze_from_default.yaml  maze_solvers.yaml  maze_solvers2.yaml  pretrain.yaml  single_agent.yaml  thermotaxis.yaml
configs/world/: bridge.yaml  default.yaml  default_e500.yaml  default_h24.yaml  default_simple.yaml  e500_decay_regen.yaml  maze.yaml  maze_dynamic.yaml  orbiting_gaussian_harsh.yaml  (+5 more)
docs/: computational_compromises.md  literature.md  maybe_vision.md  repo_usage.md  research_context.md  structure.md  structure.txt
scripts/: run.sh  run_corner_expansion.sh  run_default_e500.sh  run_e500_decay_regen.sh  run_from_pretrain.sh  run_from_pretrain_orbiting.sh  run_from_pretrain_orbiting_harsh.sh  run_from_pretrain_simple.sh  run_from_pretrain_temporal.sh  run_h24.sh  run_maze_dynamic.sh  run_maze_from_default.sh  run_pretrain.sh  run_single_agent.sh  run_thermotaxis.sh  transfer.sh  transfer_explorers.sh  transfer_explorers2.sh  transfer_explorers3.sh  transfer_explorers4.sh  transfer_maze.sh  transfer_maze_solvers.sh  transfer_maze_solvers2.sh
src/: agent.py  agent_simple.py  physics.py  simulation.py  simulation_simple.py  utils.py  world.py
(+476 files in other folders)
